updating title of webpage

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Perspective - Exploring Ideas, Finding Inspiration</title>
+    <title>Saadhika Dua</title>
     <meta name="description" content="A space for exploring ideas, finding inspiration, and discovering new ways of seeing the world through lifestyle, wellness, travel, and personal growth." />
     <meta name="author" content="Perspective Blog" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
